Made Console and publisher work

--- a/console/CMakeLists.txt
+++ b/console/CMakeLists.txt
@@ -5,12 +5,21 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-include_directories(include/console)
+INCLUDE_DIRECTORIES(
+  include/console
+)
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(robot_arm_interface REQUIRED)
 
+add_executable(console src/main.cpp src/Console.cpp src/Parser.cpp)
+ament_target_dependencies(console rclcpp robot_arm_interface)
+
+install(TARGETS
+  console
+  DESTINATION lib/${PROJECT_NAME})
 
 
 
