--- a/simulation/package.xml
+++ b/simulation/package.xml
@@ -18,6 +18,7 @@
   <depend>geometry_msgs</depend>
   <depend>urdf</depend>
   <depend>sensor_msgs</depend>
+  <depend>robot_arm_interface</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
